# TAPL

./: .gitignore  3  ;  Cargo.toml  Makefile  README.md  load_examples.sh
app/: Cargo.toml
app/src/: main.rs  untyped_arithmetic.rs
app/src/cli/: bounded_quantification.rs  errors.rs  exceptions.rs  existential.rs  f_omega.rs  f_omega_sub.rs  featherweight.rs  inference.rs  lambda_omega.rs  mod.rs  nameless_representation.rs  recursive.rs  references.rs  stlc.rs  subtypes.rs  system_f.rs  typed_arithmetic.rs  untyped_arithmetic.rs  untyped_lambda.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/web/index/: Cargo.toml
apps/web/index/src/: context.rs  example_select.rs  lib.rs  out_divs.rs
crates/driver_lib/: Cargo.toml
crates/driver_lib/src/: cli.rs  format.rs  languages.rs  lib.rs
crates/language_lib/: Cargo.toml
crates/language_lib/src/: errors.rs  lib.rs  types.rs  values.rs
crates/language_lib/src/bounded_quantification/: check.rs  eval.rs  terms.rs  values.rs
crates/language_lib/src/exceptions/: check.rs  mod.rs  terms.rs
crates/language_lib/src/existential/: eval.rs  mod.rs  parser.rs  types.rs  values.rs
crates/language_lib/src/f_omega/: parser.rs
crates/language_lib/src/f_omega_sub/: terms.rs  values.rs
crates/language_lib/src/lambda_omega/: parser.rs  values.rs
crates/language_lib/src/languages/: mod.rs
crates/language_lib/src/recursive/: eval.rs  terms.rs  types.rs
crates/language_lib/src/references/: parser.rs  types.rs
crates/language_lib/src/stlc/: mod.rs
crates/language_lib/src/subtypes/: parser.rs  types.rs
crates/language_lib/src/system_f/: check.rs  eval.rs  parser.rs  types.rs
crates/language_lib/src/typed_arithmetic/: check.rs  values.rs
crates/language_lib/src/untyped_arithmetic/: eval.rs  mod.rs  terms.rs
crates/language_lib/src/untyped_lambda/: eval.rs  mod.rs  terms.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: check_test.rs  errors.rs  eval_test.rs  latex_buss_test.rs  latex_frac_test.rs  latex_test.rs  latex_trace_test.rs  lib.rs  load_tests.rs  parse_test.rs  paths.rs  reparse_test.rs  test.rs  test_result.rs  testsuite.rs
crates/test_utils/src/latex/: latex_buss_test.rs  latex_frac_test.rs  latex_grammar_test.rs  latex_trace_test.rs  mod.rs
crates/test_utils/src/testsuite/: bounded_quantification.rs  cli.rs  f_omega.rs  (+13 more)
crates/web_bin/: Cargo.toml
crates/web_bin/src/: context.rs  example_select.rs  lib.rs  out_divs.rs
lib/driver/: Cargo.toml
lib/driver/src/: cli.rs  format.rs  formattable.rs  languages.rs  lib.rs
lib/languages/: Cargo.toml
lib/languages/src/: all_languages.rs  lib.rs
lib/test/: Cargo.toml
lib/test/src/: check_test.rs  config.rs  eval_test.rs  lib.rs  load_tests.rs  parse_test.rs  reparse_test.rs  test.rs  test_result.rs
lib/web/: Cargo.toml
lib/web/src/: collapsable.rs  example_select.rs  language_select.rs  lib.rs  source_area.rs  web_langs.rs
tests/: Cargo.toml  bounded_quantification.rs  exceptions.rs  existential.rs  f_omega.rs  f_omega_sub.rs  lambda_omega.rs  macros.rs  recursive.rs  references.rs  stlc.rs  subtypes.rs  system_f.rs  typed_arithmetic.rs  untyped_arithmetic.rs  untyped_lambda.rs
tests/boundedquantification/: Cargo.toml
tests/boundedquantification/src/: bounded.rs  check_test.rs  eval_test.rs  parse_test.rs  reparse_test.rs  suite.rs
tests/common/: Cargo.toml
tests/common/src/: lib.rs  testsuite.rs
tests/e2e/: Cargo.toml  bounded_quantification.rs  exceptions.rs  existential.rs  f_omega.rs  f_omega_sub.rs  lambda_omega.rs  recursive.rs  references.rs
tests/endtoend/: Cargo.toml
tests/endtoend/src/: endtoend.rs  load_tests.rs  nameless.rs  paths.rs  stlc.rs  test.rs  testsuite.rs  untyped_arithmetic.rs  untyped_lambda.rs
tests/exceptions/: Cargo.toml
tests/exceptions/src/: eval_test.rs  exceptions.rs  parse_test.rs  reparse_test.rs  suite.rs  typecheck_test.rs
tests/existential/: Cargo.toml
tests/existential/src/: check_test.rs  eval_test.rs  existential.rs  parse_test.rs  reparse_test.rs  suite.rs
tests/f_omega/: Cargo.toml
tests/f_omega/src/: check_test.rs  eval_test.rs  fomega.rs  parse_test.rs  suite.rs
tests/f_omega_sub/: Cargo.toml
tests/f_omega_sub/src/: check_test.rs  eval_test.rs  fomegasub.rs  parse_test.rs  reparse_test.rs  suite.rs
tests/featherweight/src/: check_test.rs  featherweight.rs  parse_test.rs  reparse_test.rs  suite.rs
tests/inference/src/: bidirectional_test.rs  infer_test.rs  inference.rs  parse_test.rs  reparse_test.rs  suite.rs
tests/integration/: Cargo.toml  macros.rs
tests/lambdaomega/: Cargo.toml
tests/lambdaomega/src/: check_test.rs  lambdaomega.rs  suite.rs
tests/nameless/: Cargo.toml
tests/nameless/src/: nameless.rs  remove_test.rs  restore_test.rs
tests/recursive/: Cargo.toml
tests/recursive/src/: eval_test.rs  parse_test.rs  recursive.rs  reparse_test.rs  suite.rs
tests/references/: Cargo.toml
tests/references/src/: eval_test.rs  parse_test.rs  references.rs  reparse_test.rs  suite.rs  typecheck_test.rs
tests/stlc/: Cargo.toml
tests/stlc/src/: check_test.rs  eval_test.rs  parse_test.rs  reparse_test.rs  stlc.rs  suite.rs
tests/subtypes/: Cargo.toml
tests/subtypes/src/: parse_test.rs  reparse_test.rs  subtypes.rs  suite.rs  typecheck_test.rs
tests/systemf/: Cargo.toml
tests/systemf/src/: check_test.rs  eval_test.rs  parse_test.rs  reparse_test.rs  suite.rs  systemf.rs
tests/test_common/: Cargo.toml
tests/test_common/src/: check_test.rs  errors.rs  eval_test.rs  lib.rs  paths.rs  reparse_test.rs  testsuite.rs
tests/typed_arithmetic/: Cargo.toml
tests/typed_arithmetic/src/: check_test.rs  eval_test.rs  parse_test.rs  reparse_test.rs  suite.rs  typed_arithmetic.rs
tests/untyped_arithmetic/: Cargo.toml
tests/untyped_arithmetic/src/: eval_test.rs  parse_test.rs  reparse_test.rs  suite.rs  untyped_arithmetic.rs
tests/untyped_lambda/: Cargo.toml
tests/untyped_lambda/src/: eval_test.rs  parse_test.rs  reparse_test.rs  suite.rs  untyped_lambda.rs
todo/featherweight_e2e/: Cargo.toml
web_app/: Cargo.toml
web_app/src/: lib.rs
(+3778 files in other folders)
