[workspace]
members = [
    # Binaries
    "apps/cli",
    "apps/web/index",
    "apps/web/check",
    "apps/web/eval",
    # Libraries
    "lib/syntax",
    "lib/parser",
    "lib/eval",
    "lib/check",
    "lib/errors",
    "lib/languages",
    "lib/derivations",
    "lib/grammar",
    "lib/trace",
    "lib/test",
    "lib/latex",
    "lib/driver",
    # Other
    "tests",
    "xtask"
]

resolver = "2"
default-members = ["apps/cli"]
