[workspace]
members = [
    # Binaries
    "apps/cli",
    "apps/web/index",
    "apps/web/check",
    "apps/web/eval",
    # Libraries
    "lib/syntax",
    "lib/parser",
    "lib/eval",
    "lib/check",
    "lib/errors",
    "lib/languages",
    "lib/derivations",
    "lib/grammar",
    "lib/trace",
    "lib/latex",
    "lib/driver",
    "lib/test",
    "lib/web",
    # Other
    "tests",
    "xtask"
]

resolver = "2"
default-members = ["apps/cli"]
