[workspace]
members = [
    # Binaries
    "apps/cli",
    "apps/web/index",
    "apps/web/check",
    "apps/web/eval",
    # Libraries
    "lib/syntax",
    "lib/parser",
    "lib/eval",
    "lib/check",
    "lib/errors",
    "lib/languages",
    "lib/derivations",
    "lib/grammar",
    "lib/trace",
    "lib/latex",
    "lib/driver",
    "lib/test",
    "lib/web",
    "lib/macros",
    # Other
    "tests/e2e",
    "tests/integration",
    "xtask"
]

resolver = "2"
default-members = ["apps/cli"]
