[package]
name = "tapl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapl"
path = "src/main.rs"

[dependencies]
untyped_arithmetic = { path="../untyped_arithmetic" }
untyped_lambda = { path="../untyped_lambda" }
stlc = { path="../stlc" }
inference = {path="../inference"}
nameless_representation = {path="../nameless_representation"}
references = {path="../references"}
exceptions = {path="../exceptions"}
subtypes = {path="../subtypes"}
featherweight = {path="../featherweight"}
system_f = {path="../system_f"}
recursive = {path="../recursive"}
existential = {path="../existential"}
bounded_quantification = {path="../bounded_quantification"}
lambda_omega = {path="../lambda_omega"}
f_omega = {path="../f_omega"}
f_omega_sub = {path="../f_omega_sub"}
