[package]
name = "tapl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features=["derive"]}
untyped_arithmetic = { path="../lang/untyped_arithmetic" }
untyped_lambda = { path="../lang/untyped_lambda" }
typed_arithmetic = { path="../lang/typed_arithmetic" }
stlc = { path="../lang/stlc" }
inference = {path="../lang/inference"}
nameless_representation = {path="../lang/nameless_representation"}
references = {path="../lang/references"}
exceptions = {path="../lang/exceptions"}
subtypes = {path="../lang/subtypes"}
#featherweight = {path="../lang/featherweight"}
system_f = {path="../lang/system_f"}
recursive = {path="../lang/recursive"}
existential = {path="../lang/existential"}
bounded_quantification = {path="../lang/bounded_quantification"}
lambda_omega = {path="../lang/lambda_omega"}
f_omega = {path="../lang/f_omega"}
f_omega_sub = {path="../lang/f_omega_sub"}
common = { path="../lang/common" }
