[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[[test]]
name="macros"
path="macros.rs"

# Language Tests
[[test]]
name = "untyped_arithmetic"
path = "untyped_arithmetic.rs"
harness=false

[[test]]
name = "untyped_lambda"
path = "untyped_lambda.rs"
harness=false

[[test]]
name = "typed_arithmetic"
path = "typed_arithmetic.rs"
harness=false

[[test]]
name = "stlc"
path = "stlc.rs"
harness=false

[[test]]
name = "references"
path = "references.rs"
harness=false

[[test]]
name = "exceptions"
path = "exceptions.rs"
harness=false

[[test]]
name = "recursive"
path = "recursive.rs"
harness=false

[[test]]
name = "subtypes"
path = "subtypes.rs"
harness=false

[[test]]
name = "bounded_quantification"
path = "bounded_quantification.rs"
harness=false

[[test]]
name = "existential"
path = "existential.rs"
harness=false

[[test]]
name = "system_f"
path = "system_f.rs"
harness=false

[[test]]
name = "lambda_omega"
path = "lambda_omega.rs"
harness=false

[[test]]
name = "f_omega"
path = "f_omega.rs"
harness=false

[[test]]
name = "f_omega_sub"
path = "f_omega_sub.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}
test_utils = { path = "../lib/test"}
errors = { path = "../lib/errors"}
languages = {path = "../lib/languages"}
check = { path="../lib/check" }
syntax = { path="../lib/syntax" }
derivations = {path="../lib/derivations"}
grammar = { path="../lib/grammar"}
macros = { path = "../lib/macros" }
