[package]
name = "tapl_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common={path="../lib/common"}
languages = { path="../lib/languages"}
wasm-bindgen = "0.2"
web-sys= { version="0.3", features=[ 
  "Window", 
  "Document",
  "Element",
  "EventListener",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlSelectElement",
  "HtmlOptionElement"
  ] }
