[package]
name = "tapl_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tapl_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features=["derive"]}
errors = { path="../../lib/errors" }
languages = {path="../../lib/languages"}
grammar = {path="../../lib/grammar"}
driver = {path="../../lib/driver"}
