[package]
name = "language"
version = "0.1.0"
edition = "2024"

[dependencies]
errors = { path="../error_lib" }
syntax = { path="../syntax_lib" }
parse = { path="../parse_lib" }
eval = { path="../eval_lib" }
check = { path="../check_lib" }
derivation = { path="../derivation_lib" } 
trace = { path="../trace_lib" }
latex = { path="../latex_lib"}
grammar = { path="../grammar_lib"}

pest={version="2.7.15"}
pest_derive={version="2.7.15"}
