[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"


[dependencies]
basic-toml = {version="0.1.10"}
serde = {version="1.0.219", features=["derive"]}
common = { path="../common_lib" }
check = { path="../check_lib" }
eval = { path="../eval_lib" }
language = { path="../language_lib" }
derivation = { path="../derivation_lib" }
syntax = {path="../syntax_lib"}
latex = { path="../latex_lib"}
parse = { path="../parse_lib"}
