[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"


[dependencies]
basic-toml = {version="0.1.10"}
serde = {version="1.0.219", features=["derive"]}
clap = { version = "4", features=["derive"]}

common = { path="../common_lib" }
check = { path="../check_lib" }
eval = { path="../eval_lib" }
language = { path="../language_lib" }
derivation = { path="../derivation_lib" }
trace = { path="../trace_lib" }
syntax = {path="../syntax_lib"}
latex = { path="../latex_lib"}
parse = { path="../parse_lib"}
grammar = { path="../grammar_lib"}
