[package]
name = "tapl_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
errors={path="../error_lib"}
language = { path="../language_lib"}
driver = { path="../driver_lib" }
wasm-bindgen = "0.2"
web-sys= { version="0.3", features=[ 
  "Window", 
  "Document",
  "Element",
  "EventListener",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlSelectElement",
  "HtmlOptionElement"
  ] }
