[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"


[dependencies]
errors = { path="../errors" }
check = { path="../check" }
eval = { path="../eval" }
languages = { path="../languages" }
derivations = { path="../derivations" }
trace = { path="../trace" }
syntax = {path="../syntax"}
latex = { path="../latex"}
parser = { path="../parser"}
grammar = { path="../grammar"}

basic-toml = {version="0.1.10"}
serde = {version="1.0.219", features=["derive"]}
clap = { version = "4", features=["derive"]}

