[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
errors = { path = "../errors" }
languages = { path = "../languages" }
driver = { path = "../driver" }

wasm-bindgen = "0.2"
web-sys= { version="0.3", features=[
  "Document",
  "HtmlElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "EventTarget",
  "Event"
]}
