[package]
name = "e2e_exceptions"
version = "0.1.0"
edition = "2021"

[[test]]
name = "exceptions"
path = "src/exceptions.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = { path="../../lang/common" }
languages = { path="../../lang/languages"}
