[package]
name = "e2e_existential"
version = "0.1.0"
edition = "2021"

[[test]]
name = "existential"
path = "src/existential.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = { path="../../lang/common" }
existential = { path="../../lang/existential" }
