[package]
name = "e2e_fomega"
version = "0.1.0"
edition = "2021"

[[test]]
name = "fomega"
path = "src/fomega.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = { path="../../lang/common" }
f_omega = { path="../../lang/f_omega" }
