[package]
name = "e2e_fomegasub"
version = "0.1.0"
edition = "2021"

[[test]]
name = "fomegasub"
path = "src/fomegasub.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = { path="../../lang/common" }
f_omega_sub = { path="../../lang/f_omega_sub" }
