[package]
name = "integration"
version = "0.1.0"
edition = "2024"

[[test]]
name="macros"
path="macros.rs"

[dependencies]
test_utils = { path = "../../lib/test"}
errors = { path = "../../lib/errors"}
languages = {path = "../../lib/languages"}
check = { path="../../lib/check" }
syntax = { path="../../lib/syntax" }
derivations = {path="../../lib/derivations"}
grammar = { path="../../lib/grammar"}
macros = { path = "../../lib/macros" }
