[package]
name = "integration"
version = "0.1.0"
edition = "2024"

[[test]]
name="macros"
path="macros.rs"

[dependencies]
errors = { path = "../../lib/errors"}
check = { path="../../lib/check" }
syntax = { path="../../lib/syntax" }
derivations = {path="../../lib/derivations"}
grammar = { path="../../lib/grammar"}
eval = { path="../../lib/eval"}
trace = { path="../../lib/trace"}
macros = { path = "../../lib/macros" }
