[package]
name = "e2e_systemf"
version = "0.1.0"
edition = "2021"

[[test]]
name = "systemf"
path = "src/systemf.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = { path="../../lang/common" }
system_f = { path="../../lang/system_f" }
