[package]
name = "e2e_untyped_arithmetic"
version = "0.1.0"
edition = "2021"

[[test]]
name = "untyped_arithmetic"
path = "src/untyped_arithmetic.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = {path="../../lang/common" }
languages = { path="../../lang/languages"}
