[package]
name = "e2e_untyped_lambda"
version = "0.1.0"
edition = "2021"

[[test]]
name = "untyped_lambdac"
path = "src/untyped_lambda.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
common = { path="../../lang/common" }
untyped_lambda = { path="../../lang/untyped_lambda" }
