[package]
name = "e2e_featherweight"
version = "0.1.0"
edition = "2021"

[[test]]
name = "featherweight"
path = "src/featherweight.rs"
harness=false

[dependencies]
serde = {version="1.0.219", features=["derive"]}

test_common = { path="../test_common" }
featherweight = { path="../../lang/featherweight" }
