[package]
name = "web_index"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
errors = {path="../../../lib/errors"}
languages = { path="../../../lib/languages"}
driver = { path="../../../lib/driver" }

wasm-bindgen = "0.2"
web-sys= { version="0.3", features=[ 
  "Window", 
  "Document",
  "Element",
  "EventListener",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlSelectElement",
  "HtmlOptionElement"
  ] }
