[package]
name = "web_index"
version = "0.1.0"
edition = "2024"
description = "wasm for index.html"

[lib]
crate-type = ["cdylib"]

[dependencies]
errors = {path="../../../lib/errors"}
driver = { path="../../../lib/driver" }
web = { path="../../../lib/web" }

wasm-bindgen = "0.2"
web-sys= { version="0.3", features=[ 
  "Window", 
  "HtmlDivElement",
  ] }
